Update swagger register
